# kbopenapi_b2c

./: .gitignore  README.md  pyproject.toml  start-openapi-dev.cmd  start-openapi-dev.sh  start-openapi-prod.cmd  start-openapi-prod.sh  start-openapi-test.cmd  start-openapi-test.sh  stop-openapi-test.cmd  stop-openapi-test.sh
KB_B2C/: B2C.txt  Tkb_GSA10020_B2C.xml  Tkb_GSC10060_B2C.xml  Tkb_GSS10030_B2C.xml  Tkb_GSS10040_B2C.xml  Tkb_IVA10370_B2C.xml  Tkb_IVA60140_B2C.xml  Tkb_IVA60190_B2C.xml  Tkb_IVM10050_B2C.xml  Tkb_IVM30010_B2C.xml  Tkb_IVS10910_B2C.xml  Tkb_IVS10920_B2C.xml  Tkb_IVS11190_B2C.xml  Tkb_IVS11430_B2C.xml  Tkb_IVS11560_B2C.xml  Tkb_IVSA0070_B2C.xml  Tkb_IVU10020_B2C.xml  Tkb_IVU10070_B2C.xml  Tkb_IVU10080_B2C.xml  Tkb_IVU10140_B2C.xml  Tkb_IVU10210_B2C.xml  Tkb_IVU10240_B2C.xml  Tkb_IVU10270_B2C.xml  Tkb_IVU10280_B2C.xml  Tkb_IVU10420_B2C.xml  Tkb_IVU10430_B2C.xml  Tkb_IVU10450_B2C.xml  Tkb_IVU10550_B2C.xml  Tkb_SIAM4983_B2C.xml  Tkb_SIQM4900_B2C.xml  Tkb_SKAM2101_B2C.xml  Tkb_SKAM2102_B2C.xml  Tkb_SKAM2201_B2C.xml  Tkb_SKAM2202_B2C.xml  Tkb_SKQM2106_B2C.xml  Tkb_SKQM3350_B2C.xml  Tkb_SKQO3390_B2C.xml  Tkb_SPAM2508_B2C.xml  Tkb_SPAO2104_B2C.xml  Tkb_SPAO2106_B2C.xml  (+55 more)
backend/: main.py  settings.py
backend/routers/: openapi_test.py
backend/services/: openapi_test_defaults.py
config/brokers/kb/: endpoints.yaml
config/openapi-test/: shared-metadata.json
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/openapi-test/: page.tsx  (+2 more)
tools/: generate_kb_b2c_samples.py
(+1 files in other folders)
