[project]
name = "kb-openapi-sample"
version = "1.0.0"
description = "KB OpenAPI B2C sample environment"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "pycryptodome>=3.20.0",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
